fixed double scrollbar issue

--- a/cleanup/static/css/main.css
+++ b/cleanup/static/css/main.css
@@ -8,7 +8,7 @@ html,
 body {
     height: 100%;
     min-width: 200px;
-    overflow: scroll;
+    overflow: visible;
     max-height: 100%;
     margin: 0;
     padding: 0;
